# paradigms-text-editor-senatede

./: CMakeLists.txt  Text.cpp  TextEditor.cpp  TextEditor.h  TextState.cpp  TextStateStack.cpp  caesar.c  main.c  main.cpp  main_for_static_library.c
Program/: TextEditor.cpp  TextEditor.h  main.cpp
Program/Caesar/: CaesarCipher.cpp  CaesarCipher.h
Program/History/: Text.cpp  TextStateStack.cpp
Program/LineTypes/: ChecklistLine.cpp  ContactLine.cpp  EmptyLine.cpp  Line.h  String.cpp  TextLine.cpp
Report/: main.md
report/: flie.md
